fixed wrapped page buttons on the upper right corner of a page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@ div.banner {
   font-weight:normal;
   float:left;
   font-size: 24px;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 div.inner_banner {
@@ -35,7 +35,7 @@ div.inner_banner {
   font-weight:normal;
   float:left;
   font-size: 24px;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 div.header-links {
